Update _config.yml with correct name

--- a/_config.yml
+++ b/_config.yml
@@ -290,7 +290,8 @@ plugins:
   - jekyll-paginate
   - jekyll-sitemap
 
-extracss: /assets/css/custom.css
+site-css:
+  - /assets/css/custom.css
 
 # Beautiful Jekyll / Dean Attali
 # 2fc73a3a967e97599c9763d05e564189
