--- a/_config.yml
+++ b/_config.yml
@@ -20,6 +20,7 @@ author: Kei Nishimura-Gasparian
 ###############################################
 
 navbar-links:
+  Research: "research"
 
 ################
 # --- Logo --- #
