--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@
 ############################
 
 # Name of website
-title: My blog
+title: Blog
 
 # Your name to show in the footer
 author: Kei Nishimura-Gasparian
